--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@stomp/stompjs": "^6.1.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "react-stomp": "^5.1.0",
-    "sockjs-client": "^1.5.1",
-    "stompjs": "^2.3.3",
-    "websocket": "^1.0.34"
+    "react-stomp": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
